create a route box

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
             android:name=".DirectionListActivity"
             android:parentActivityName=".MainActivity" />
         <activity
+            android:name=".RouteListActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
             android:name=".DisplayNavigationOptions"
             android:parentActivityName=".MainActivity">
             <meta-data
